--- a/projects/purge data/invoke_purge.yml
+++ b/projects/purge data/invoke_purge.yml
@@ -2,33 +2,49 @@
   #shell: is_running=$(ps aux | grep {{item}}.sh | wc -l); if [ $is_running -lt 3 ]; then echo {{ item }}; fi
   shell: ps aux | grep {{item}}.sh
   register: finished_purge_client
-  with_items: "{{ client.stdout.split() }}"
+  loop: "{{ client.stdout_lines }}"
 
 #- debug:
 #   var: finished_purge_client
 
-- name: filter client if no runs to delete
-  command: echo {{ item.item }}
+- name: filter client if no data to delete
+  shell: |
+         source profile; sqlplus -s {{ dbuser }}/{{ dbpass }}@orcl <<EOF
+         SET pagesize 0
+         SET HEAD OFF
+         SET VERIFY OFF
+         SET trimspool on
+         SET LIN 200
+
+         select (case when count > 0 then 'Data Available' else 'No Data' end) as status from (select count(*) as count from table);
+         exit;
+         EOF
+  #command: echo {{ item.item }}
   register: finished_runs_client
   when: item.stdout_lines | length  < 3
   loop: "{{ finished_purge_client.results }} "
   loop_control:
    label: "{{ item.item }}"
 
+#- debug:
+#   var: finished_runs_client
+
 - name: kicking Off Purge for client
   command: echo "kicking off purge"
   #with_items: "{{ finished_purge_client.stdout.split() | difference(finished_runs_client.stdout.split()) }}"
-  when: item.changed
+  #when: item.changed
+  when: (item.stdout is defined) and (item.stdout == "Data Available")
   loop: "{{ finished_runs_client.results }} "
   loop_control:
-   label: "{{ item.stdout | default('N/A') }}"
+   #label: "{{ item.stdout | default('N/A') }}"
+   label: "{{ item.item.item }}"
 
 - debug:
-   msg: "Kicking off purge for client {{ item.stdout | default('No') }} - iteration {{ iteration }}"
-  when: item.changed
+   msg: "Kicking off purge for client {{ item.item.item }} - iteration {{ iteration }}"
+  when: (item.stdout is defined) and (item.stdout == "Data Available")
   loop: "{{ finished_runs_client.results }} "
   loop_control:
-   label: "{{ item.stdout | default('N/A') }}"
+   label: "{{ item.item.item }}"
 
 #- name: set retry if window is left
 #  set_fact:
@@ -37,14 +53,17 @@
    #counter: "{{ counter}} + [ {{ new_counter}} ]"
    #ansible_loop.last: true
    #when: current_time < end_time
+
+
+#- debug:
+#   msg: "{{ finished_runs_client.results | map(attribute='stdout') | list}}"
+
 - block:
    - debug:
-      msg: "No runs left to be purged for all provided clients, thus exiting job"
+      msg: "No data left to be purged for all provided clients, thus exiting job"
    - include_tasks: post_purge.yml
    - meta: end_play
-
-  when: iteration | int == 50
+  when: "'Data Available' not in finished_runs_client.results | map(attribute='stdout') | list"
 
 - name: waiting for 10 seconds
   command: sleep 10
-
