--- a/projects/purge data/post_purge.yml
+++ b/projects/purge data/post_purge.yml
@@ -1,5 +1,9 @@
 - name: Waiting for last iteration to complete
-  command: echo "Waiting for last iteration to complete"
+  shell: ps aux | grep "_p.sh"
+  register: last_iter
+  until: last_iter.stdout_lines | length  < 3
+  retries: 12
+  delay: 300
 
 - name: cleaning up directory
-  command: echo "rm -rf cli_auto"
+  command: echo "cleanup cli_auto"
